@@ -223,6 +223,12 @@ if you want to draw on the screen directly use @code{x-draw-text}
 @item Removed Features
 
 @itemize @minus
+@item @code{test-widget} function [Christopher Bratusek]
+
+The @code{test-widget} function is heavily broken and crashes Sawfish
+very easily, using it for debugging is therefore impossible. So it is
+removed now.
+
 @item @code{about-dialog} function [Christopher Bratusek]
 
 The custom @code{about-dialog} function has been replaced by
