@@ -18,6 +18,8 @@
 
 	* lisp/sawfish/wm/autoload.jl: missing autoload for `cycle-or-exec' added
 
+	* lisp/sawfish/gtk/widget-test.jl: removed, since it is heavily broken
+
 2010-09-17  Christopher Brautsek <zanghar@freenet.de>
 	* lisp/sawfish/wm/ext/match-window.jl
 	* lisp/sawfish/wm/windows.jl: added `never-delete' window-matcher.
